--- a/ais_web2/work/WebApplication1/WebApplication1/Hidden/main.css
+++ b/ais_web2/work/WebApplication1/WebApplication1/Hidden/main.css
@@ -1,6 +1,19 @@
 ﻿
 
 @media screen and (min-width: 0px) {
+    .dataTables_wrapper .dataTables_paginate {
+        margin-left: 371px !important;
+        margin-top: 210px !important;
+        float: none !important;
+        text-align: left !important;
+        padding-top: .25em !important;
+    }
+
+    .svg3 {
+        width: 15px;
+        margin-left: -37px
+    }
+
     .total_l_today {
         padding: 6px;
         position: absolute;
@@ -9,26 +22,32 @@
         left: 7px;
         background-color: #FFFFFF;
     }
+
     .paginate_button:hover {
         background-color: #FAEAFE !important;
         background: #FAEAFE !important;
-        border: 1px solid #FAEAFE!important;
+        border: 1px solid #FAEAFE !important;
     }
+
     .swal2-confirm {
         border-radius: 8px !important;
         width: 125px;
     }
+
     div:where(.swal2-container) div:where(.swal2-container) div:where(.swal2-actions) {
         display: block ruby !important;
-        margin: 1.25em 150px 0!important;
+        margin: 1.25em 150px 0 !important;
     }
+
     .body2 {
         width: 1240px;
         background-color: #EAEAEA !important
     }
-    button{
-        font-size:16px!important;
+
+    button {
+        font-size: 16px !important;
     }
+
     .textbox_space2 {
         margin-right: 50px;
     }
@@ -204,7 +223,7 @@
     }
     /* เลือกสีพื้นหลังของตาราง */
     table.dataTable {
-      /*  background-color: #f5f5f5;*/
+        /*  background-color: #f5f5f5;*/
     }
 
         /* ปรับเส้นขอบตาราง */
@@ -328,6 +347,7 @@
     .button_login1:hover {
         background: #f84874bf;
     }
+
     .button_login1 {
         border: 0.5px;
         width: 394px;
@@ -430,11 +450,12 @@
         position: absolute;
         top: 25px;
         left: 67px;
-        font-size: 16px;
+        font-size: 14px !important;
         font-weight: 400;
         line-height: 24px;
         letter-spacing: 0em;
         text-align: left;
+        font-family: Arial;
     }
 
     .grp_1 {
@@ -565,8 +586,8 @@
         outline: none;
         width: 165px !important;
         height: 48px !important;
-        margin-left: -172px!important;
-        margin-top: 40px!important;
+        margin-left: -172px !important;
+        margin-top: 40px !important;
         filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
         font-style: normal;
         font-size: 16px;
@@ -577,6 +598,7 @@
         padding-left: 20px;
         /*    padding-bottom: 60px*/
     }
+
         .button_Main.clicked {
             transform: translateX(200px) !important;
             /*    border-radius: 8px;*/
@@ -585,8 +607,8 @@
             outline: none;
             width: 165px !important;
             height: 48px !important;
-            margin-left: -172px!important;
-            margin-top: 40px!important;
+            margin-left: -172px !important;
+            margin-top: 40px !important;
             filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
             font-style: normal;
             font-size: 16px;
@@ -597,15 +619,16 @@
             padding-left: 20px;
             /*    padding-bottom: 60px*/
         }
+
     .button_report {
         /*  border-radius: 8px;*/
         border: 0px;
         outline: none;
         position: absolute;
-        margin-top: 95px!important;
+        margin-top: 95px !important;
         width: 165px !important;
         height: 48px !important;
-        margin-left: -172px!important;
+        margin-left: -172px !important;
         font-style: normal;
         font-size: 16px;
         line-height: 27px;
@@ -616,32 +639,35 @@
         filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
         transform: translateX(200px) !important;
     }
+
         .button_report.clicked {
             pointer-events: none; /* ปิดการใช้งานการควบคุมหลังคลิก */
         }
 
-    .button_report :active{
-        /*  border-radius: 8px;*/
-        border: 0px;
-        outline: none;
-        position: absolute;
-        margin-top: 95px;
-        width: 165px!important;
-        height: 48px!important;
-        margin-left: -172px!important;
-        font-style: normal;
-        font-size: 16px;
-        line-height: 27px;
-        color: #FFFFFF;
-        background: #F84874;
-        text-align: left;
-        padding-left: 20px;
-        filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
-        transform: translateX(200px)!important;
-    }
+        .button_report :active {
+            /*  border-radius: 8px;*/
+            border: 0px;
+            outline: none;
+            position: absolute;
+            margin-top: 95px;
+            width: 165px !important;
+            height: 48px !important;
+            margin-left: -172px !important;
+            font-style: normal;
+            font-size: 16px;
+            line-height: 27px;
+            color: #FFFFFF;
+            background: #F84874;
+            text-align: left;
+            padding-left: 20px;
+            filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+            transform: translateX(200px) !important;
+        }
+
     .fiexd {
         margin-right: 50%;
-        width: 1068px; height: 60%;
+        width: 1068px;
+        height: 60%;
         margin-left: 297px;
         margin-top: 30px;
         background: #FFFFFF;
@@ -827,7 +853,7 @@
         height: 40px;
         border-radius: 8px;
         background: #FAEAFE;
-        color: #666666 !important;
+        color: #333333 !important;
     }
 
     .cbocity_1 {
@@ -1025,9 +1051,11 @@
         text-align: left;
         color: #000000;
     }
+
     .button_save:hover {
         background: #f84874bf;
     }
+
     .button_save {
         top: -18px;
         width: 136px;
@@ -1039,9 +1067,11 @@
         border-radius: 8px;
         position: relative;
     }
+
     .button_clear:hover {
         background: #f84874bf;
     }
+
     .button_clear {
         position: relative;
         top: -18px;
@@ -1054,9 +1084,11 @@
         margin-top: 0px;
         margin-left: 389px;
     }
+
     .button_edit:hover {
         background: #f84874bf;
     }
+
     .button_edit {
         width: 136px;
         height: 48px;
@@ -1095,16 +1127,17 @@
         margin-left: 321px;
         color: #333333 !important;
     }
+
     .button_logout_2:hover {
         background: #f84874bf;
     }
+
     .button_logout_2 {
         width: 136px;
         height: 48px;
         border-radius: 8px;
         background: #F84874;
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
@@ -1120,7 +1153,7 @@
         font-weight: 400;
         line-height: 27px;
         letter-spacing: 0em;
-/*        text-align: left;*/
+        /*        text-align: left;*/
         background: #F84874;
         color: aliceblue;
         border-radius: 8px;
@@ -1136,7 +1169,6 @@
 
     .button_req_ph_ {
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
@@ -1170,6 +1202,7 @@
     }
 
     .inputdate_s {
+        font-size: 14px;
         width: 230px;
         margin-top: 28px;
         margin-left: 50px;
@@ -1199,18 +1232,20 @@
         margin-left: 33px;
         border-radius: 8px;
     }
+
     .button_report_1:hover {
         background: #f84874bf;
     }
+
     .button_report_1 {
-        border: 0.5px; width: 136px;
+        border: 0.5px;
+        width: 136px;
         height: 48px;
         margin-top: 0px;
         margin-left: 25px;
         border-radius: 8px;
         background: #F84874;
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
@@ -1227,7 +1262,8 @@
         background-color: rgb(255, 255, 255);*/
         margin-bottom: 10%;
         border-radius: 8px;
-        top: 195px; word-wrap: break-word;
+        top: 195px;
+        word-wrap: break-word;
     }
 
     tb_1 th {
@@ -1300,6 +1336,19 @@
 }
 
 @media screen and (min-width: 1400px) {
+    .dataTables_wrapper .dataTables_paginate {
+        float: none !important;
+        text-align: left !important;
+        padding-top: .25em !important;
+        margin-left: 371px !important;
+        margin-top: 210px !important;
+    }
+
+    .svg3 {
+        width: 15px;
+        margin-left: -37px
+    }
+
     .total_l_today {
         padding: 6px;
         position: absolute;
@@ -1308,25 +1357,31 @@
         left: 7px;
         background-color: #FFFFFF;
     }
+
     .paginate_button:hover {
         background-color: #FAEAFE !important;
         background: #FAEAFE !important;
         border: 1px solid #FAEAFE !important;
     }
+
     .swal2-confirm {
         border-radius: 8px !important;
         width: 125px;
     }
+
     div:where(.swal2-container) div:where(.swal2-container) div:where(.swal2-actions) {
         display: block ruby !important;
-        margin: 1.25em 150px 0!important;
+        margin: 1.25em 150px 0 !important;
     }
+
     .Main_form {
         margin-left: 100px;
     }
+
     button {
         font-size: 16px !important;
     }
+
     .body2 {
         background-color: #EAEAEA !important
     }
@@ -1459,7 +1514,7 @@
     }
     /* เลือกสีพื้นหลังของตาราง */
     table.dataTable {
-      /*  background-color: #f5f5f5;*/
+        /*  background-color: #f5f5f5;*/
     }
 
         table.dataTable th,
@@ -1586,6 +1641,7 @@
         background: #FAEAEE;
         border-radius: 8px;
     }
+
     .button_login1:hover {
         background: #f84874bf;
     }
@@ -1600,6 +1656,7 @@
         border-radius: 5px;
         color: white !important;
     }
+
         .button_login1:hover {
             background: #f84874bf;
         }
@@ -1694,11 +1751,12 @@
         position: absolute;
         top: 25px;
         left: 67px;
-        font-size: 16px;
+        font-size: 14px !important;
         font-weight: 400;
         line-height: 24px;
         letter-spacing: 0em;
         text-align: left;
+        font-family: Arial;
     }
 
     .grp_1 {
@@ -1782,9 +1840,11 @@
         text-align-last: center;
         text-align: center;
     }
+
     .button_search:hover {
         background: #f84874bf;
     }
+
     .button_search {
         transform: translateX(200px);
         /*  border-radius: 8px;*/
@@ -1846,6 +1906,7 @@
         padding-left: 20px;
         /* padding-bottom: 60px*/
     }
+
         .button_Main.clicked {
             transform: translateX(200px) !important;
             /*    border-radius: 8px;*/
@@ -1866,15 +1927,16 @@
             padding-left: 20px;
             /*    padding-bottom: 60px*/
         }
+
     .button_report {
         /*  border-radius: 8px;*/
         border: 0px;
         outline: none;
         position: absolute;
-        margin-top: 95px!important;
+        margin-top: 95px !important;
         width: 165px !important;
         height: 48px !important;
-        margin-left: -172px!important;
+        margin-left: -172px !important;
         font-style: normal;
         font-size: 16px;
         line-height: 27px;
@@ -1885,18 +1947,20 @@
         filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
         transform: translateX(200px) !important;
     }
+
         .button_report.clicked {
             pointer-events: none; /* ปิดการใช้งานการควบคุมหลังคลิก */
         }
+
         .button_report :active {
             /*  border-radius: 8px;*/
             border: 0px;
             outline: none;
             position: absolute;
-            margin-top: 95px!important;
+            margin-top: 95px !important;
             width: 165px !important;
             height: 48px !important;
-            margin-left: -172px!;
+            margin-left: -172px !;
             font-style: normal;
             font-size: 16px;
             line-height: 27px;
@@ -1907,9 +1971,11 @@
             filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
             transform: translateX(200px) !important;
         }
+
     .fiexd {
         margin-right: 50%;
-        width: 1068px; height: 60%;
+        width: 1068px;
+        height: 60%;
         margin-left: 297px;
         margin-top: 30px;
         background: #FFFFFF;
@@ -1956,7 +2022,7 @@
         width: 59.2%;
         height: 45px;
         margin-top: -1px;
-     /*   margin-left: 64px;*/
+        /*   margin-left: 64px;*/
         font-size: 24px;
         font-weight: 700;
         line-height: 36px;
@@ -2086,7 +2152,7 @@
         height: 40px;
         border-radius: 8px;
         background: #FAEAFE;
-        color: #666666 !important;
+        color: #333333 !important;
     }
 
     .cbocity_1 {
@@ -2304,9 +2370,11 @@
         margin-left: 0px;
         background: #F84874;
     }
+
     .button_save:hover {
         background: #f84874bf;
     }
+
     .button_save {
         top: -18px;
         width: 136px;
@@ -2318,9 +2386,11 @@
         border-radius: 8px;
         position: relative;
     }
+
     .button_clear:hover {
         background: #f84874bf;
     }
+
     .button_clear {
         position: relative;
         top: -18px;
@@ -2333,9 +2403,11 @@
         margin-top: 0px;
         margin-left: 389px;
     }
+
     .button_edit:hover {
         background: #f84874bf;
     }
+
     .button_edit {
         width: 136px;
         height: 48px;
@@ -2375,16 +2447,17 @@
         margin-left: 321px;
         color: #333333 !important;
     }
+
     .button_logout_2 {
         background: #f84874bf;
     }
+
     .button_logout_2 {
         width: 136px;
         height: 48px;
         border-radius: 8px;
         background: #F84874;
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
@@ -2400,7 +2473,7 @@
         font-weight: 400;
         line-height: 27px;
         letter-spacing: 0em;
-     /*   text-align: left;*/
+        /*   text-align: left;*/
         background: #F84874;
         color: aliceblue;
         border-radius: 8px;
@@ -2416,7 +2489,6 @@
 
     .button_req_ph_ {
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
@@ -2449,6 +2521,7 @@
     }
 
     .inputdate_s {
+        font-size: 14px;
         width: 230px;
         margin-top: 28px;
         margin-left: 50px;
@@ -2478,9 +2551,11 @@
         margin-left: 33px;
         border-radius: 8px;
     }
+
     .button_report_1:hover {
         background: #f84874bf;
     }
+
     .button_report_1 {
         border: 0.5px;
         width: 136px;
@@ -2490,7 +2565,6 @@
         border-radius: 8px;
         background: #F84874;
         font-size: 18px;
-        
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
