--- a/ais_web2/work/WebApplication1/WebApplication1/Views/FrmDetail/Index.cshtml
+++ b/ais_web2/work/WebApplication1/WebApplication1/Views/FrmDetail/Index.cshtml
@@ -1716,12 +1716,14 @@
         $("#button_save2").hide()
         $("#svg1").on('click', function (e) {
 
-            window.location.href = '/FrmDetail/Index'
+            window.location.href = '/FrmDetail/Index?id=' + getCookie("id")
+
 
         })
         $("#svg2").on('click', function (e) {
 
-            window.location.href = '/FrmDetail/Index'
+            window.location.href = '/FrmDetail/Index?id=' + getCookie("id")
+
 
         })
 
