--- a/ais_web2/work/WebApplication1/WebApplication1/Hidden/main.css
+++ b/ais_web2/work/WebApplication1/WebApplication1/Hidden/main.css
@@ -8,7 +8,16 @@
         text-align: left !important;
         padding-top: .25em !important;
     }
-
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.7);
+    }
     .svg3 {
         width: 15px;
         margin-left: -37px
@@ -2683,7 +2692,16 @@
     .textbox_space2 {
         margin-right: 50px;
     }
-
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.7);
+    }
     .copy4 {
         margin-top: 204px;
         margin-left: 31px;
