--- a/ais_web2/work/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/ais_web2/work/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="occtel_title">
     </title>
+    <link rel="icon" href="~/text/tmc_logo.ico"
+          type="image/x-icon">
     @Styles.Render("~/Content/css")
     @*@Scripts.Render("~/bundles/modernizr")*@
     <style>
+        #logo {
+            max-height: 40px; /* ปรับขนาดรูปภาพตามต้องการ */
+            margin-right: 10px;
+        }
+
         .dataTables_paginate {
             margin-top: 20%;
         }
@@ -756,6 +763,7 @@
 </head>
 
 <body>
+
     <div class="">
 
         @RenderBody()
@@ -799,9 +807,10 @@
         $("#occ_tel").text(" แบบฟอร์มบันทึกโทร ระบบ " + getCookie("type_db" + "" + getCookie1("id")))
         $("#label_username").text(getCookie("user_name" + "" + getCookie1("id")))
         if (getCookie("type_db" + "" + getCookie1("id")) !== "") {
-            $("#occtel_title").text("ระบบ " + getCookie("type_db" + "" + getCookie1("id")))
+            /*$("#occtel_title").text("ระบบ " + getCookie("type_db" + "" + getCookie1("id")))*/
+            $("#occtel_title").text("OCC Telesale");
         } else {
-            $("#occtel_title").text("เข้าสู่ระะบบ");
+            $("#occtel_title").text("OCC Telesale");
         }
     </script>
 </body>
