--- a/ais_web2/work/WebApplication1/WebApplication1/Views/FrmLogin/Index.cshtml
+++ b/ais_web2/work/WebApplication1/WebApplication1/Views/FrmLogin/Index.cshtml
@@ -162,13 +162,19 @@
                     } else if (e === "06") {
                         alert2("Username หรือ Password ไม่ถูกต้องค่ะ")
                         $("#modal1").css("display", "none");
+                    } else if (e === "07") {
+                        alert2("ขออภัย โปรดลองอีกครั้งค่ะ")
+                        $("#modal1").css("display", "none");
                     }
-                    else {
+                    else if (e.split(',')[0] === "1") {
 
-                        window.location.href = '/FrmDetail/Index?id=' + e
-                        document.cookie = "id=" + e + "; path=/";
+                        window.location.href = '/FrmDetail/Index?id=' + e.split(',')[1]
+                        document.cookie = "id=" + e.split(',')[1] + "; path=/";
                         $("#modal1").css("display", "block");
 
+                    } else {
+                        alert2("Message Error is " + e)
+                        $("#modal1").css("display", "none");
                     }
                 }
             })
