--- a/ais_web2/work/WebApplication1/WebApplication1/Views/FrmDetail/Index.cshtml
+++ b/ais_web2/work/WebApplication1/WebApplication1/Views/FrmDetail/Index.cshtml
@@ -1010,9 +1010,9 @@
 
             // ใช้ setInterval เพื่อเรียก chatHub.server.requestData ทุก 10 วินาที
             setInterval(function () {
-             /*   console.log("ส่งค่า Agen " + getCookie("Agen" + getCookie("id")) + " ไป")*/
-                chatHub.server.requestData(getCookie("id"));
-            }, 1000);
+                /*   console.log("ส่งค่า Agen " + getCookie("Agen" + getCookie("id")) + " ไป")*/
+                chatHub.server.requestData(localStorage.getItem("Agen"+""+ getCookie("id")));
+            }, 2000);
         });
     }
     function fucsave() {
