--- a/ais_web2/work/WebApplication1/WebApplication1/Views/FrmLogin/Index.cshtml
+++ b/ais_web2/work/WebApplication1/WebApplication1/Views/FrmLogin/Index.cshtml
@@ -125,6 +125,37 @@
 <script>
     $(document).ready(function (e) {
 
+        function getCookie(cookieName) {
+            var name = cookieName + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var cookieArray = decodedCookie.split(';');
+            for (var i = 0; i < cookieArray.length; i++) {
+                var cookie = cookieArray[i];
+                while (cookie.charAt(0) == ' ') {
+                    cookie = cookie.substring(1);
+                }
+                if (cookie.indexOf(name) == 0) {
+                    return cookie.substring(name.length, cookie.length).replace(/\+/g, ' ');
+                }
+            }
+            return "";
+        }
+        function getCookie1(cookieName) {
+            var name = cookieName + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var cookieArray = decodedCookie.split(';');
+            for (var i = 0; i < cookieArray.length; i++) {
+                var cookie = cookieArray[i];
+                while (cookie.charAt(0) == ' ') {
+                    cookie = cookie.substring(1);
+                }
+                if (cookie.indexOf(name) == 0) {
+                    return cookie.substring(name.length, cookie.length).replace(/\+/g, ' ');
+                }
+            }
+            return "";
+        }
+
         $("#modal1").css("display", "none");
         function alert2(txt) {
             swal({
@@ -167,6 +198,14 @@
 
                         window.location.href = '/FrmDetail/Index?id=' + e
                         document.cookie = "id=" + e + "; path=/";
+                        localStorage.setItem("user_name", getCookie("user_name") + "" + getCookie("id"))
+                        localStorage.setItem("strDB", getCookie("strDB") + "" + getCookie("id"))
+                        localStorage.setItem("type_title", getCookie("type_title") + "" + getCookie("id"))
+                        localStorage.setItem("type_db", getCookie("type_db") + "" + getCookie("id"))
+                        localStorage.setItem("Agen", getCookie("Agen") + "" + getCookie("id"))
+                        localStorage.setItem("EXTENSION", getCookie("EXTENSION") + "" + getCookie("id"))
+                        localStorage.setItem("Agent_Ip", getCookie("Agent_Ip") + "" + getCookie("id"))
+
                         $("#modal1").css("display", "block");
 
                     }
